--- a/styles/main.css
+++ b/styles/main.css
@@ -30,7 +30,8 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100vh;
 }
 
@@ -45,12 +46,14 @@ body,
 input,
 button,
 textarea {
-    font: 500 1.6rem Poppins; /*weight size family*/
+    font: 500 1.6rem Poppins;
+    /* font-weight: 500;
+    font-family: Poppins;
+    font-size: 1.6rem; */
     color: var(--color-text-base);
 }
 
 #container {
     width: 90vw;
     max-width: 700px;
-    border: 1px solid red;
-}
+} 
